Fixed vertical position of digits in Steps

--- a/src/Steps/index.module.css
+++ b/src/Steps/index.module.css
@@ -44,6 +44,11 @@
   box-sizing: border-box;
 }
 
+.stepCircleInner {
+  position: relative;
+  top: -1px;
+}
+
 .stepLine {
   position: absolute;
   top: 2.5rem;
