Added spaces in calc expressions

--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -56,17 +56,17 @@ input.withPrefix {
 .input:focus,
 .input:not([disabled]):hover {
   border: 2px solid var(--color-primary);
-  padding: calc(0.875rem-1px) calc(1.5rem-1px)
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
 }
 
 .input.withPrefix:focus,
 .input.withPrefix:not([disabled]):hover {
-  padding-left: calc(3rem-1px);
+  padding-left: calc(3rem - 1px);
 }
 
 .input.withSuffix:focus,
-.input.withSuffix:not([disabled]):hover  {
-  padding-right: calc(3rem-1px);
+.input.withSuffix:not([disabled]):hover {
+  padding-right: calc(3rem - 1px);
 }
 
 .input.error:focus,
@@ -101,6 +101,7 @@ input.withPrefix {
   border: 1px solid var(--color-highlighted);
 }
 
-.input.noBorder, .input.noBorder:hover {
-    border-color: transparent;
+.input.noBorder,
+.input.noBorder:hover {
+  border-color: transparent;
 }
