--- a/src/Badge/index.module.css
+++ b/src/Badge/index.module.css
@@ -6,7 +6,7 @@
 .badge {
   display: inline-block;
   position: absolute;
-  bottom: calc(100%-0.5rem);
+  bottom: calc(100% - 0.5rem);
   right: -0.5rem;
   height: 1rem;
   min-width: 1rem;
