--- a/src/Tooltip/index.module.css
+++ b/src/Tooltip/index.module.css
@@ -1,22 +1,31 @@
 .contentContainer {
   position: relative;
   cursor: pointer;
-  z-index: 998;
+  display: inline-block;
 }
 
-.contentContainer:hover > .tooltipContainer {
+.contentContainer.block {
+  display: block;
+}
+
+.contentContainer.hoverable:hover > .tooltipContainer, .tooltipContainer.visible {
   visibility: visible;
   opacity: 1;
 }
 
 .tooltip {
+  z-index: 998;
   max-width: 22.5rem;
   display: inline-block;
   padding: 1rem 1.5rem;
   border-radius: 1rem;
-  color: var(--color-bg-input);
   position: relative;
   box-shadow: 0 16px 48px rgba(73, 92, 136, 0.15);
+  box-sizing: border-box;
+}
+
+.tooltipContainer.block, .tooltip.block {
+  width: 100%;
 }
 
 .tooltipContainer {
@@ -33,7 +42,7 @@
 
 .tooltipContainer.topLeft {
   transform: translate(-25%, 0);
-  bottom: calc(100% + 0.75rem);
+  bottom: calc(100% + 1rem);
   left: 50%;
 }
 
@@ -46,7 +55,7 @@
 
 .tooltipContainer.topCenter {
   transform: translate(-50%, 0);
-  bottom: calc(100% + 0.75rem);
+  bottom: calc(100% + 1rem);
   left: 50%;
 }
 
@@ -59,7 +68,7 @@
 
 .tooltipContainer.topRight {
   transform: translate(-75%, 0);
-  bottom: calc(100% + 0.75rem);
+  bottom: calc(100% + 1rem);
   left: 50%;
 }
 
@@ -71,7 +80,7 @@
 }
 
 .tooltipContainer.middleLeft {
-  right: calc(100% + 0.75rem);
+  right: calc(100% + 1rem);
   top: 50%;
   transform: translate(0, -50%);
 }
@@ -83,7 +92,7 @@
 }
 
 .tooltipContainer.middleRight {
-  left: calc(100% + 0.75rem);
+  left: calc(100% + 1rem);
   top: 50%;
   transform: translate(0, -50%);
 }
@@ -96,7 +105,7 @@
 
 .tooltipContainer.bottomLeft {
   transform: translate(-25%, 0);
-  top: calc(100% + 0.75rem);
+  top: calc(100% + 1rem);
   left: 50%;
 }
 
@@ -109,7 +118,7 @@
 
 .tooltipContainer.bottomCenter {
   transform: translate(-50%, 0);
-  top: calc(100% + 0.75rem);
+  top: calc(100% + 1rem);
   left: 50%;
 }
 
@@ -122,7 +131,7 @@
 
 .tooltipContainer.bottomRight {
   transform: translate(-75%, 0);
-  top: calc(100% + 0.75rem);
+  top: calc(100% + 1rem);
   left: 50%;
 }
 
