Update version and fix bugs in modal and filter components

--- a/src/Filters/index.module.css
+++ b/src/Filters/index.module.css
@@ -1,10 +1,11 @@
 .wrapper {
   position: fixed;
-  z-index: 998;
+  z-index: 999;
   top: 0;
   width: 456px;
   height: 100vh;
   box-sizing: border-box;
+  box-shadow: 0px 16px 48px rgba(73, 92, 136, 0.15);
 }
 
 .right {
@@ -52,5 +53,5 @@
   right: 0;
   bottom: 0;
   background-color: transparent;
-  z-index: 999;
+  z-index: 998;
 }
