--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -45,7 +45,7 @@
   /** border colors */
   --color-border: #8e939f;
   --color-shadow: rgba(73, 92, 136, 0.15);
-  --color-modal-overlay: #1b1f2750;
+  --color-modal-overlay: rgba(27, 31, 39, 0.5);
 
   /** text colors */
   --color-text-primary: #1b1f27;
