--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -30,6 +30,8 @@
   --color-alert: #ffcc00;
   --color-alert-hover: #ffd633;
   --color-alert-active: #cca300;
+  --color-secondary-grey: #a6adba;
+  --color-secondary-grey-hover: #7d828b;
   --color-white: #ffffff;
   --color-black: #000000;
 
